# healthCare-monitor

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  RELEASE_NOTES.md  SECURITY.md  TASKS.md  project_status.md  status.md
caretrace/backend/: .env.example  .gitignore  .vercelignore  alembic.ini  pyproject.toml  requirements.txt  start_production.sh
caretrace/backend/alembic/: env.py
caretrace/backend/alembic/versions/: 0001_initial_initial_schema.py  0002_phase10_phase10_routing_and_issue_fields.py  0003_phase20_reasoning_summary.py
caretrace/backend/api/: index.py
caretrace/backend/app/: __init__.py  main.py  seed_demo.py
caretrace/backend/app/api/: deps.py  router.py
caretrace/backend/app/core/: config.py  logging.py  middleware.py  telemetry.py
caretrace/backend/app/db/: base.py  session.py
caretrace/backend/app/models/: __init__.py  enums.py  evaluation_result.py  mixins.py  review_item.py  run.py  validation_log.py
caretrace/backend/app/schemas/: __init__.py  assistant.py  clinical_note.py  common.py  health.py  process.py  review.py  run.py  validation.py
caretrace/backend/app/services/: prompts.py  (+8 more)
caretrace/backend/prompts/: clinical_extraction_v1.md
caretrace/backend/tests/: conftest.py  test_api.py  test_confidence.py  test_health.py  test_persistence.py  test_phase11_endpoints.py  test_phase15_endpoints.py  test_phase16_review_edges.py  test_phase21_assistant.py  test_phase22_observability.py  test_phase23_deploy.py  test_pipeline.py  test_providers.py  test_routing.py  test_schemas.py  test_validation.py
(+127 files in other folders)
